--- a/index.html
+++ b/index.html
@@ -147,6 +147,50 @@
       <button class="order-button">Order Now</button>
     </div>
   </div>
+  <div class="menu-item" data-product="Cheeseburger Deluxe" data-price="8.99">
+    <img class="menu-image" src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=400&q=80" alt="Cheeseburger" />
+    <div class="menu-details">
+      <div class="menu-header">
+        <div class="product-name">Cheeseburger Deluxe</div>
+        <div class="price">$8.99</div>
+      </div>
+      <div class="specifications">Juicy beef patty with cheese, lettuce, tomato, onion & special sauce.</div>
+      <button class="order-button">Order Now</button>
+    </div>
+  </div>
+  <div class="menu-item" data-product="Cheeseburger Deluxe" data-price="8.99">
+    <img class="menu-image" src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=400&q=80" alt="Cheeseburger" />
+    <div class="menu-details">
+      <div class="menu-header">
+        <div class="product-name">Cheeseburger Deluxe</div>
+        <div class="price">$8.99</div>
+      </div>
+      <div class="specifications">Juicy beef patty with cheese, lettuce, tomato, onion & special sauce.</div>
+      <button class="order-button">Order Now</button>
+    </div>
+  </div>
+  <div class="menu-item" data-product="Cheeseburger Deluxe" data-price="8.99">
+    <img class="menu-image" src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=400&q=80" alt="Cheeseburger" />
+    <div class="menu-details">
+      <div class="menu-header">
+        <div class="product-name">Cheeseburger Deluxe</div>
+        <div class="price">$8.99</div>
+      </div>
+      <div class="specifications">Juicy beef patty with cheese, lettuce, tomato, onion & special sauce.</div>
+      <button class="order-button">Order Now</button>
+    </div>
+  </div>
+  <div class="menu-item" data-product="Cheeseburger Deluxe" data-price="8.99">
+    <img class="menu-image" src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=400&q=80" alt="Cheeseburger" />
+    <div class="menu-details">
+      <div class="menu-header">
+        <div class="product-name">Cheeseburger Deluxe</div>
+        <div class="price">$8.99</div>
+      </div>
+      <div class="specifications">Juicy beef patty with cheese, lettuce, tomato, onion & special sauce.</div>
+      <button class="order-button">Order Now</button>
+    </div>
+  </div>
   <div class="menu-item" data-product="Veg Momo" data-price="5.00">
     <img class="menu-image" src="https://images.unsplash.com/photo-1615392587889-c2cf5dc6d03a?auto=format&fit=crop&w=400&q=80" alt="Veg Momo" />
     <div class="menu-details">
